Fixed the spaces on mobile version

--- a/src/components/Pages/About.css
+++ b/src/components/Pages/About.css
@@ -264,7 +264,7 @@ color: red;
   }
   .containerLife{
     width: 100%;
-    height: 600px;
+    height: 650px;
   }
   .SubTileRight {
    padding-left: 20px;
@@ -290,7 +290,7 @@ color: red;
   /*Education*/
   .containerEducation{
     width: 100%;
-    height: 560px;
+    height: 580px;
   }
   .videoEducation{
     margin-top: 0px;
@@ -321,7 +321,7 @@ color: red;
   /*Skills*/
   .containerSkill{
     width: 100%;
-    height: 600px;
+    height: 630px;
   }
   
   .videoSkill{
@@ -350,7 +350,7 @@ color: red;
    /*Hobiie*/
   .containerHobbie{
     width: 100%;
-    height: 600px;
+    height: 580px;
   }
   .videoHobiie{
     width: 100%;
